<resources>
    <string name="app_name">HomeWork</string>
    <string name="back">Back</string>
    <string name="movie_title_text">Avengers:\nEnd Game</string>
    <string name="movie_genre_text">Action, Adventure, Fantasy</string>
    <string name="storyline_head">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="parental_guidance">13+</string>
    <string name="reviews_number">125 Reviews</string>
    <string name="movie_actor_1_name">Robert Downey Jr.</string>
    <string name="movie_actor_2_name">Chris Evans</string>
    <string name="movie_actor_3_name">Mark Ruffalo</string>
    <string name="movie_actor_4_name">Chris Hemsworth</string>

</resources>