<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MovieDetails">

    <ImageView
        android:id="@+id/movie_logo_image"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:scaleType="centerCrop"
        android:src="@drawable/movie_4x_back_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/back_pic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/back_text"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_text"
        app:tint="@color/gray_dark"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/back"
        android:textColor="@color/gray_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/back_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_parental_guidance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/parental_guidance"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movie_title"
        app:layout_constraintStart_toEndOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="254dp"
        android:text="@string/movie_title_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/movie_logo_image" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/movie_genre_text"
        android:textColor="@color/pink_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="83dp"
        android:layout_height="17dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="1dp"
        android:numStars="5"
        android:rating="4"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toBottomOf="@+id/movie_reviews_num"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/movie_reviews_num" />

    <TextView
        android:id="@+id/movie_reviews_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/reviews_number"
        android:textAllCaps="true"
        android:textColor="@color/gray_dark"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/movie_genre"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/storyline_head_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/storyline_head"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/movie_reviews_num" />

    <TextView
        android:id="@+id/storyline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/storyline_text"
        android:textColor="@color/color_white_transparent"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/storyline_head_text" />

    <TextView
        android:id="@+id/movie_cast_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/storyline_text" />

    <ImageView
        android:id="@+id/actor_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/movie_1_cast_1"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toStartOf="@+id/actor_2"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/movie_cast_title_text"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/actor_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/movie_1_cast_2"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toStartOf="@+id/actor_3"
        app:layout_constraintStart_toEndOf="@+id/actor_1"
        app:layout_constraintTop_toTopOf="@+id/actor_1"
        tools:ignore="ContentDescription"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/actor_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/movie_1_cast_3"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toStartOf="@+id/actor_4"
        app:layout_constraintStart_toEndOf="@+id/actor_2"
        app:layout_constraintTop_toTopOf="@+id/actor_1"
        tools:ignore="ContentDescription"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/actor_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/movie_1_cast_4"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/actor_3"
        app:layout_constraintTop_toTopOf="@+id/actor_1"
        tools:ignore="ContentDescription"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/actor_1_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/movie_actor_1_name"
        android:textColor="@color/gray_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/actor_1"
        app:layout_constraintStart_toStartOf="@+id/actor_1"
        app:layout_constraintTop_toBottomOf="@+id/actor_1" />

    <TextView
        android:id="@+id/actor_2_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_actor_2_name"
        android:textColor="@color/gray_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/actor_2"
        app:layout_constraintStart_toStartOf="@+id/actor_2"
        app:layout_constraintTop_toTopOf="@+id/actor_1_name" />

    <TextView
        android:id="@+id/actor_3_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_actor_3_name"
        android:textColor="@color/gray_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/actor_3"
        app:layout_constraintStart_toStartOf="@+id/actor_3"
        app:layout_constraintTop_toTopOf="@+id/actor_1_name" />

    <TextView
        android:id="@+id/actor_4_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_actor_4_name"
        android:textColor="@color/gray_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/actor_4"
        app:layout_constraintStart_toStartOf="@+id/actor_4"
        app:layout_constraintTop_toTopOf="@+id/actor_1_name" />

</androidx.constraintlayout.widget.ConstraintLayout>